# shellscape

./: Cargo.toml  README.md
src/: app.rs  browser.rs  error.rs  fetcher.rs  image.rs  keybindings.rs  main.rs  parser.rs  renderer.rs
src/ui/: address_bar.rs  content.rs  mod.rs  splash.rs  status_bar.rs  tabs.rs
